--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -2,21 +2,15 @@ name: Linter
 
 on: [push]
 
-permissions:
-  contents: read
-  packages: read
-
 jobs:
   lint:
     name: Lint Codebase
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-  steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Install dependencies
+        run: npm install
 
-    - name: Install dependencies
-      run: npm install
-
-    - name: Lint code
-      run: npm run lint
+      - name: Lint code
+        run: npm run lint
